<resources>
    <string name="app_name">Mathematics</string>
    <string name="oo">Вид функции</string>
    <string name="ot">Название</string>
    <string name="oth">График</string>
    <string name="to">y = kx</string>
    <string name="tt">Прямая пропорциональность</string>
    <string name="tth">Прямая через начало координат</string>
    <string name="tho">y = kx + b</string>
    <string name="tht">Линейная</string>
    <string name="thth">Прямая</string>
    <string name="fo">y = k / x</string>
    <string name="ft">Обратная пропорциональность</string>
    <string name="fth">Гипербола</string>
    <string name="fio">y = ax^2 + bx + c</string>
    <string name="fit">Квадратичная</string>
    <string name="fith">Парабола</string>
    <string name="so">y = x^3</string>
    <string name="st">Кубическая</string>
    <string name="sth">Кубическая парабола</string>
    <string name="sevo">y = √x</string>
    <string name="sevt">Корень</string>
    <string name="sevth">Ветвь параболы</string>
    <string name="eo">y = x^2</string>
    <string name="et">Квадратная</string>
    <string name="eth">Парабола через начало координат</string>
    <string name="teory">
    <b>  7 класс\n
        Геометрия. Основы планиметрии\n</b>
    Точка — простейшая геометрическая фигура, не разбивается на части. Из характеристик имеет только координаты.\n
    Прямая — геометрическая фигура, не искривляющаяся линия, не имеет ни начала, ни конца.\n
    Основное свойство прямой: через любые 2 точки можно провести ровно одну прямую.\n
    Теорема о двух пересекающихся прямых: любые 2 пересекающиеся(∩) прямые имеют ровно одну общую точку.\n
    Отрезок —часть прямой, ограниченная двумя точками.\n
    Длина отрезка AB — расстояние между точками A и B.\n
    Основное свойство длины отрезка — если точка C является внутренней точкой отрезка AB, то AB = AC + BC.\n
    Равные отрезки — те, которые можно совместить наложением, имеют равную длину.\n
    Равные фигуры — те, которые можно совместить наложением.\n
    Луч (полупрямая) — часть прямой, ограниченная точкой с одной стороны.\n
    Дополнительные лучи — имеющие общее начало и лежащие на одной прямой.\n
    Угол (∠) — геометрическая фигура, часть плоскости, ограниченная двумя лучами из одной точки.\n
    Основное свойство величины угла: если луч OC делит угол ABC на два угла, то: ∠AOB = ∠AOC + ∠COB.\n
    Острый угол — градусная мера &lt; 90°.\n
    Прямой угол — градусная мера = 90°.\n
    Тупой угол — градусная мера &gt; 90°, &lt; 180°.\n
    Развёрнутый угол — градусная мера = 180°.\n
    Полный угол — градусная мера = 360°.\n
    Смежные углы — 2 угла, у которых одна из сторон общая, а две другие — дополнительные лучи.\n
    Свойство смежных углов: сумма градусных мер = 180°.\n
    Вертикальные углы — 2 угла, отличных от развёрнутого, стороны каждого из которых являются дополнительными лучами для сторон другого.\n
    Свойство вертикальных углов: градусные меры равны.\n
    Перпендикулярные (⟂) прямые — прямые, при пересечении образующие угол = 90°.\n
    Теорема о единственной прямой перпендикулярной данной: через любую точку проходит ровно одна прямая, перпендикулярная данной.\n
    Параллельные (||) прямые — не пересекающиеся прямые.\n
    Аксиома параллельных прямых: через данную точку можно провести ровно 1 прямую, параллельную данной.\n
    Признаки параллельности двух прямых:\n
    ●Прямые параллельны одной прямой.\n
    ●Прямые перпендикулярны одной прямой.\n
    ●Накрест-лежащие углы равны.\n
    ●Соответственные углы равны.\n
    ●Односторонние углы в сумме дают 180°.\n
    Расстояние между 2 параллельными прямыми — расстояние по перпендикуляру от любой точки прямой до другой прямой.\n
    Перпендикуляр — прямая, пересекающая другую прямую под прямым углом.\n
    Серпер — серединный перпендикуляр.\n
    Треугольник — геометрическая фигура, часть плоскости, ограниченная тремя отрезками и 3 точками, не лежащими на одной прямой.\n
    Периметр (P) — сумма длин сторон.\n
    Площадь (S) — характеристика, обозначающая размер внутренней части фигуры.\n
    S∆ = ½ah\n
    Биссектриса — луч с началом в вершине угла, делящий угол на два равных угла.\n
    Биссектриса треугольника — отрезок биссектрисы угла от вершины до пересечения с противолежащей стороной.\n
    Центр вписанной окружности треугольника — точка пересечения биссектрис.\n
    Медиана — отрезок, соединяющий вершину треугольника с серединой противолежащей стороны.\n
    Центр масс — точка пересечения медиан треугольника, делит каждую медиану в отношении 2/1 от вершины.\n
    Высота треугольника — отрезок перпендикуляра из вершины на противолежащую сторону до пересечения с ней.\n
    Ортоцентр — точка пересечения высот.\n
    Центр описанной окружности треугольника — точка пересечения серперов.\n
    Остроугольный треугольник — все углы острые, c2 &lt; a2 + b2, где c — наибольшая сторона.\n
    Тупоугольный треугольник — есть тупой угол, c2 &gt; a2 + b2, где c — наибольшая сторона.\n
    Прямоугольный треугольник — есть прямой угол, c2 = a2 + b2, где c — наибольшая сторона.\n
    Катеты — 2 стороны в прямоугольном треугольнике, образующие прямой угол.\n
    Гипотенуза — сторона в прямоугольном треугольнике, противолежащая прямому углу.\n
    Равнобедренный треугольник — 2 стороны (боковые) равны, основание — оставшаяся сторона треугольника.\n
    Свойства равнобедренного треугольника:\n
    ●Углы при основании равны.\n
    ●Высота, биссектриса и медиана совпадают.\n
    Равносторонний (правильный) треугольник — все стороны равны. Все углы = 60°.\n
    Внешний угол в треугольнике — угол, смежный с каким-нибудь углом треугольника, равен сумме двух не смежных с ним углов треугольника.\n
    Средняя линия треугольника — отрезок, соединяющий середины двух сторон треугольника. Равен ½ третьей стороны треугольника и параллелен ей.\n
    Теорема о неравенстве треугольника: Каждая сторона треугольника меньше суммы двух других сторон.\n
    Теорема о сумме углов треугольника: Сумма углов в треугольнике равна 180°.\n
    Теорема о соотношениях между сторонами и углами в треугольнике: Против большей стороны лежит больший угол, против меньшей стороны — меньший. Напротив равных сторон лежат равные углы.\n
    Признаки равенства треугольников:\n
    ●По двум сторонам и углу между ними.\n
    ●По стороне и двум прилежащим к ней углам.\n
    ●По трём сторонам.\n
    Признаки равенства прямоугольных треугольников:\n
    ●По 2 катетам.\n
    ●По катету и гипотенузе.\n
    ●По гипотенузе и острому углу.\n
    ●По катету и прилежащему острому углу.\n
    ●По катету и противолежащему острому углу.\n
    Катет, лежащий против угла в 30° равен половине гипотенузы.\n
    ГМТ — геометрическое место точек.\n
    Окружность — геометрическая фигура, ГМТ равноудалённых от центра окружности.\n
    Радиус — отрезок, соединяющий центр окружности с точкой на ней.\n
    Дуга — часть окружности, ограниченная двумя точками.\n
    Хорда — отрезок, соединяющий две точки на окружности.\n
    Диаметр — хорда, проходящая через центр окружности.\n
    Круг — часть плоскости, ограниченная окружностью.\n
    Сектор — часть круга, ограниченная 2 радиусами и дугой.\n
    Сегмент — часть круга, ограниченная дугой и стягивающей её хордой.\n
    Касательная к окружности — прямая, имеющая с окружностью ровно одну общую точку. Перпендикулярна радиусу. Две касательные из одной точки равны.\n
    Центральный угол — угол, образованный двумя радиусами с центром в вершине.\n
    Вписанный угол — угол, у которого вершина лежит на окружности, а стороны пересекают эту окружность.\n
    Описанный угол — угол, образованный двумя касательными из одной точки. Центр окружности лежит на биссектрисе описанного угла.\n
    Теорема о касательной: радиус окружности, проведённый в точку касания перпендикулярен касательной.\n
    Около любого треугольника можно описать и вписать в него окружность.\n \n
    <b>  7 класс\n
        Алгебра. Основы\n \n</b>
    Степень числа a с показателем n (an) — произведение n множителей, каждый из которых равен a.\n
    a1=a; a0=1; anam =an+m; an/am=an-m; (an)m=anm; (ab)n=anbn; (a/b)n=an/bn; a-n=1/an.\n
    Одночлен — произведение чисел (коэффициентов), переменных и их степеней.\n
    Степень одночлена — сумма показателей степеней входящих в него переменных.\n
    Многочлен — сумма одночленов.\n
    Степень многочлена — наибольшая из степеней входящих в многочлен одночленов.\n
    Стандартный вид одночлена — произведение числового множителя и переменных со степенями.\n
    Стандартный многочлен — все одночлены стандартного вида без подобных.\n
    Формулы сокращённого умножения(ФСУ):\n
    a2-b2=(a-b)(a+b); (a±b)2=a2±2ab+b2; a3±b3=(a±b)(a2 ∓ab+b2)\n
    Разложение многочлена на множители — представление в виде произведения многочленов.\n
    Нахождение корней уравнения — нахождение значений переменных, обращающих уравнение в верное числовое равенство.\n
    Решение уравнения — нахождение всех корней или доказательство их отсутствия.\n
    Модуль(|a|) — расстояние на координатной прямой до 0.\n
    |-a| = |a|; |a| >= 0\n
    Среднее арифметическое ряда чисел — сумма чисел делённая на их количество.\n
    График уравнения с 2 переменными — множество точек на координатной плоскости, координаты которых являются корнями уравнения.\n
    Решение системы уравнений — нахождение общих корней для всех уравнений.\n
    Стандартные способы решения систем уравнений:\n
    ●Графически\n
    ●Подстановкой\n
    ●Сложением\n
    Функция(функциональная зависимость) — зависимость между 2 переменными, при которой каждому значению независимой переменной соответствует значение зависимой переменной.\n
    Аргумент(x) — независимая переменная, по оси абсцисс.\n
    Функция аргумента(y) — зависимая переменная, по оси ординат.\n
    Область определения(D(f)) — множество допустимых значений x для функции f.\n
    Область значения(E(f)) — множество значений y для функции f.\n
    График функции — множество всех точек с координатами (x;y).\n
    <b>Функции\n></b>
</string>
</resources>