<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/teory"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:stretchColumns="1">

                    <View
                        android:background="#FF909090"
                        android:layout_height="2dip" />

                    <TableRow>

                        <TextView
                            android:padding="3dip"
                            android:text="@string/oo" />

                        <TextView
                            android:padding="3dip"
                            android:text="@string/ot" />

                        <TextView
                            android:padding="3dip"
                            android:text="@string/oth" />
                    </TableRow>

                    <View
                        android:background="#FF909090"
                        android:layout_height="2dip" />

                    <TableRow>

                        <TextView
                            android:padding="3dip"
                            android:text="@string/to" />

                        <TextView
                            android:padding="3dip"
                            android:text="@string/tt" />

                        <TextView
                            android:padding="3dip"
                            android:text="@string/tth" />
                    </TableRow>

                    <View
                        android:background="#FF909090"
                        android:layout_height="2dip" />

                    <TableRow>

                        <TextView
                            android:padding="3dip"
                            android:text="@string/tho" />

                        <TextView
                            android:padding="3dip"
                            android:text="@string/tht" />

                        <TextView
                            android:padding="3dip"
                            android:text="@string/thth" />
                    </TableRow>

                    <View
                        android:background="#FF909090"
                        android:layout_height="2dip" />

                    <TableRow>

                        <TextView
                            android:padding="3dip"
                            android:text="@string/fo" />

                        <TextView
                            android:padding="3dip"
                            android:text="@string/ft" />

                        <TextView
                            android:padding="3dip"
                            android:text="@string/fth" />
                    </TableRow>

                    <View
                        android:background="#FF909090"
                        android:layout_height="2dip" />

                    <TableRow>

                        <TextView
                            android:padding="3dip"
                            android:text="@string/fio" />

                        <TextView
                            android:padding="3dip"
                            android:text="@string/fit" />

                        <TextView
                            android:padding="3dip"
                            android:text="@string/fith" />
                    </TableRow>

                    <View
                        android:background="#FF909090"
                        android:layout_height="2dip" />

                    <TableRow>

                        <TextView
                            android:padding="3dip"
                            android:text="@string/so" />

                        <TextView
                            android:padding="3dip"
                            android:text="@string/st" />

                        <TextView
                            android:padding="3dip"
                            android:text="@string/sth" />
                    </TableRow>

                    <View
                        android:background="#FF909090"
                        android:layout_height="2dip" />

                    <TableRow>

                        <TextView
                            android:padding="3dip"
                            android:text="@string/sevo" />

                        <TextView
                            android:padding="3dip"
                            android:text="@string/sevt" />

                        <TextView
                            android:padding="3dip"
                            android:text="@string/sevth" />
                    </TableRow>

                    <View
                        android:background="#FF909090"
                        android:layout_height="2dip" />

                    <TableRow>

                        <TextView
                            android:padding="3dip"
                            android:text="@string/eo" />

                        <TextView
                            android:padding="3dip"
                            android:text="@string/et" />

                        <TextView
                            android:padding="3dip"
                            android:text="@string/eth" />
                    </TableRow>


                    <View
                        android:background="#FF909090"
                        android:layout_height="2dip" />

                </TableLayout>
            </HorizontalScrollView>
        </LinearLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>